...
            </Text>
          </VStack>

          <FormControl isRequired isInvalid={emailInvalid}>
            <FormControl.Label>Email</FormControl.Label>
            <Input
              type="email"
              value={email}
              onChangeText={setEmail}
              placeholder="you@example.com"
            />
            <FormControl.ErrorMessage>Email must contain @.</FormControl.ErrorMessage>
          </FormControl>

          <FormControl isRequired>
            <FormControl.Label>Password</FormControl.Label>
...
